--- a/src/app.css
+++ b/src/app.css
@@ -1,2 +1,9 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin '@tailwindcss/forms';
+
+@theme {
+  --font-sans: "Bangers", "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  --font-bangers: "Bangers";
+  --color-background-pill-purple: #ecb5ec;
+}
