--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
     "Bangers", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji";
   --font-bangers: "Bangers";
+  --font-inter: "Inter";
   --color-pills-pink: #ecb5ec;
 }
 
