--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,7 @@
 @layer theme, base, components, utilities;
 @theme {
   --font-sans:
-    "Helvitica", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-bangers: "Bangers";
   --font-inter: "Inter";
   --color-pills-pink: #ecb5ec;
