--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,8 @@
 @layer theme, base, components, utilities;
 @theme {
   --font-sans:
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    "Bangers", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
   --font-bangers: "Bangers";
   --font-inter: "Inter";
   --color-pills-pink: #ecb5ec;
